@@ -15,6 +15,7 @@ version <next>:
 - adecorrelate audio filter
 - atilt audio filter
 - grayworld video filter
+- AV1 Low overhead bitstream format muxer
 
 
 version 4.4:
